# ltm_poc

./: .gitignore  LICENSE  README.md  package.xml  setup.py
launch/: ltm_poc_demo.launch.py
ltm_poc/: controller_node.py  simple_detector_node.py  viewer_node.py  vlm_clip_node.py
rviz/: ltm_poc_view.rviz
